Change query list implementation to better handle multi-threading. Clear query list at stop() stage, for multiple uses (ie. standalone server).